--- a/first/templates/Product/recent.html
+++ b/first/templates/Product/recent.html
@@ -7,7 +7,8 @@
     <title>Django Form</title>
 </head>
 <body>
-    <form action="" method="get">
+    <form action="" method="post">
+        {% csrf_token %}
         <table>
             {{form.as_p}}
         </table>
