--- a/first/templates/Product/recent.html
+++ b/first/templates/Product/recent.html
@@ -7,7 +7,7 @@
     <title>Django Form</title>
 </head>
 <body>
-    <form action="" method="post">
+    <form action="" method="POST">
         {% csrf_token %}
         <table>
             {{form.as_p}}
