--- a/first/templates/Product/submit.html
+++ b/first/templates/Product/submit.html
@@ -7,6 +7,6 @@
     <title>Redirect</title>
 </head>
 <body>
-    <h1>Successfully registration done. Thak you</h1>
+    <h1>Successfully registration done. Thank you</h1>
 </body>
 </html>
