--- a/first/templates/Review/login.html
+++ b/first/templates/Review/login.html
@@ -4,16 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>UserCreationForm</title>
+    <title>Login</title>
 </head>
 <body>
     <form action="" method = "POST" novalidate>
         {% csrf_token %}
         {% for frm in form %}
-        {{frm.label_tag}} {{frm}} {{frm.errors | striptags}} <br><br>
+        {{frm.label_tag}} {{frm}} {{frm.errors | striptags}} <br> <br>
+
         {% endfor %}
-        <input type="submit" value = "Submit">
-        <a href="{% url 'login' %}">Login</a>
+        <input type="submit" value = "Login">
+        <a href="{% url 'registration' %}">Registration</a>
     </form>
 </body>
 </html>
