--- a/first/templates/Review/login.html
+++ b/first/templates/Review/login.html
@@ -9,6 +9,11 @@
 <body>
     <form action="" method = "POST" novalidate>
         {% csrf_token %}
+        {% if form.non_field_errors %}
+        {% for error in form.non_field_errors %}
+        <p>{{error}}</p>
+        {% endfor %}
+        {% endif %}
         {% for frm in form %}
         {{frm.label_tag}} {{frm}} {{frm.errors | striptags}} <br> <br>
 
