Password change form

--- a/first/templates/Review/success.html
+++ b/first/templates/Review/success.html
@@ -11,5 +11,7 @@
 
 
     <a href="{% url 'logout' %}">Logout</a>
+    <a href="{% url 'passwordchange' %}">Password change using old password</a>
+
 </body>
 </html>
