--- a/first/templates/Review/success.html
+++ b/first/templates/Review/success.html
@@ -9,7 +9,11 @@
 <body>
     <h1>Successfully Login</h1>
 
-
+    <form action="" method = "POST">
+        {% csrf_token %}
+        {{form.as_p}}
+    </form>
+    
     <a href="{% url 'logout' %}">Logout</a>
     <a href="{% url 'passwordchange' %}">Password change using old password</a>
 
