--- a/first/templates/common_code/base.html
+++ b/first/templates/common_code/base.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css">
 
     {% block css %} 
-        <link rel="stylesheet" href="{% static 'css/style.css' %}"> 
+        <link rel="stylesheet" href="{% static 'css/base.css' %}"> 
     {% endblock css %}
    
 </head>
@@ -36,10 +36,16 @@
           </li>
           <li class="nav-item">
             <a class="nav-link" href="{% url 'productpage' %}">Product</a>
+          </li>
 
            <li class ="nav-item"> 
                 <a class="nav-link" href="{% url 'review' %}">Review</a>
             </li>
+
+            <li class ="nav-item"> 
+              <a class="nav-link" href="{% url 'pays' %}">Pays</a>
+          </li>
+            
             <ul class="dropdown-menu">
               <li><a class="dropdown-item" href="#">Action</a></li>
               <li><a class="dropdown-item" href="#">Another action</a></li>
