--- a/first/static/css/base.css
+++ b/first/static/css/base.css
@@ -6,19 +6,67 @@
 }
 
 body{
-    background:  #f9f9f9;
+    background: white;
     min-height: 100vh;
     overflow-x: hidden;
 }
 
 header{
     position: absolute;
-    top: 0px;
-    left: 0px;
+    top: 0;
+    left: 0;
     width: 100%;
     padding: 30px 100px;
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-start;
     align-items: center;
-    z-index: 100%;
+    z-index: 100;
+}
+
+.logo{
+    font-size: 2em;
+    color: #359381;
+    pointer-events: none;
+    margin-right: 400px;
+}
+
+.navigation a {
+    text-decoration: none;
+    color: #359381;
+    padding: 6px 15px;
+    border-radius: 20px;
+    margin: 0 10px;
+    font-weight: 600;
+}
+
+.navigation a:hover,
+.navigation a.active{
+    background-color: #359381;
+    color: #fff;
+}
+
+
+.diu {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+
+}
+
+#text {
+    position: absolute;
+    font-size: 5em;
+    color: #FFF;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, .8);
+}
+
+
+.diu img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    pointer-events: none;
 }
