--- a/first/static/css/base.css
+++ b/first/static/css/base.css
@@ -70,3 +70,22 @@ header{
     width: 100%;
     pointer-events: none;
 }
+
+
+.sec {
+    position: relative;
+    background: #003329;
+    padding: 100px;
+}
+
+.sec h2{
+    font-size: 3em;
+    color: #fff;
+    margin-bottom: 10px;
+}
+
+.sec{
+    font-size: 1em;
+    color: #fff;
+    font-weight: 300;
+}
