--- a/first/templates/common_code/base.html
+++ b/first/templates/common_code/base.html
@@ -11,6 +11,9 @@
     {% block css %} 
         <link rel="stylesheet" href="{% static 'css/base.css' %}"> 
     {% endblock css %}
+  
+     
+
    
 </head>
 <body>
@@ -42,17 +45,22 @@
     </section>
 
 
-    <section class="sec">
-        <h2>Diu Scorolling Website</h2>
-       
+    <section class = "sec">
+        <h2>Diu Scrolling Website</h2>
+        <p>
+            In the DIU Question Bank, sections are used to categorize and organize questions based on specific subjects, topics, or disciplines. <br><br>
+            Sections provide a structured framework for users to easily navigate and locate relevant questions within the question bank. <br><br>
+            Here are some key points about sections in the DIU Question Bank.
+        </p>
     </section>
 
 
 
     {% block content %}{% endblock content %}
 
+    {% load static %}  
+   <script src="{% static 'javaScript/base.js' %}"></script>
 
 
-    <script>src = "base.js"</script>
 </body>
 </html>
