--- a/first/templates/common_code/base.html
+++ b/first/templates/common_code/base.html
@@ -27,8 +27,11 @@
         <a href="#">Service</a>
         <a href="#">Contact</a>
       </nav>
-      
 
+      <nav class = "log">
+        <a href="#">Login</a>
+        <a href="#">SingUp</a>
+      </nav>
     </header>
 
     <section class = "diu">
@@ -40,7 +43,7 @@
         <img src="{% static 'image/hill5.png' %}" id="hill5">
         <img src="{% static 'image/tree.png' %}" id="tree">
         <h2 id = "text">DIU QUESTION BANK</h2>
-        <img src="{% static 'image/leaf.png' %}" id="leaf">
+        {% comment %} <img src="{% static 'image/leaf.png' %}" id="leaf"> {% endcomment %}
         <img src="{% static 'image/plant.png' %}" id="plant">
     </section>
 
