--- a/first/static/css/base.css
+++ b/first/static/css/base.css
@@ -57,7 +57,7 @@ header{
 
 .log a{
     text-decoration: none;
-    color: #359381;
+    color: white;
     padding: 6px 15px;
     border-radius: 20px;
     margin: 0 10px;
@@ -68,7 +68,6 @@ header{
     background-color: #359381;
     color: #fff;
 }
-
 
 /* This is the picture section  */
 
