--- a/first/templates/lo_up/login.html
+++ b/first/templates/lo_up/login.html
@@ -1,8 +1,82 @@
-{% extends 'common_code/base.html' %} <title>{% block title %}SignUp{% endblock title %}</title>
+<!DOCTYPE html>
 {% load static %}
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>{% block <title></title> %}Login{% endblock %}</title>
+    {% block css %} 
+    <link rel="stylesheet" href="{% static 'css/login.css' %}"> 
+    {% endblock css %}
+</head>
+<body>
+    
+    <section class = "diu">
+        
+        <img src="{% static 'image/hill1.png' %}" id="hill1">
+        <img src="{% static 'image/hill2.png' %}" id="hill2">
+        <img src="{% static 'image/hill3.png' %}" id="hill3">
+        <img src="{% static 'image/hill4.png' %}" id="hill4">
+        <img src="{% static 'image/hill5.png' %}" id="hill5">
+        <img src="{% static 'image/tree.png' %}" id="tree">
+        <img src="{% static 'image/leaf.png' %}" id="leaf">
+        <img src="{% static 'image/plant.png' %}" id="plant">
+    </section>
 
-{% block css %} <link rel="stylesheet" href="{% static 'css/base.css' %}"> {% endblock css %}
+    
 
-{% block content %}
-    <h1>This is loin Page </h1>
-{% endblock content %}
+
+    <div class = "wrapper">
+        <span class = "icon-close">
+            <ion-icon name="close-outline"></ion-icon>
+        </span>
+        <div class = "form-box login">
+            <h2>Login</h2>
+            {% if error_message %}
+                <p class="error">{{ error_message }}</p>
+            {% endif %}
+            <form action="" method = "POST">
+                {% csrf_token %}
+                <div class = "input-box">
+                    <span class = "icon"><ion-icon name="person"></ion-icon></span>
+                    <input type="text" required name = "username">
+                    <label >Username</label>
+                </div>
+                <div class = "input-box">
+                    <span class = "icon"><ion-icon name="lock-closed"></ion-icon></span>
+                    <input type="password" required name = "password">
+                    <label >Password</label>
+                </div>
+                <div class="remember-forgot">
+                    <label><input type="checkbox" name = "checkbox">Remember me</label>
+                    <a href="#">Forgot Password</a>
+                </div>
+                <button type = "submit" class = "btn">Login</button>
+                <div class = "login-register">
+                    <p>Don't have an account? <a href="{% url 'signup' %}" class = "register-link">SignUp</a></p>
+                </div>
+            </form>
+            
+        </div>
+    </div>
+
+    
+
+
+
+
+
+
+
+
+  {% block content %}{% endblock content %}
+
+  {% load static %}  
+ <script src="{% static 'javaScript/login.js' %}"></script>
+
+ <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+
+</body>
+</html>
