--- a/first/templates/lo_up/signup.html
+++ b/first/templates/lo_up/signup.html
@@ -1,10 +1,90 @@
-{% extends 'common_code/base.html' %} <title>{% block title %}SignUp{% endblock title %}</title>
+<!DOCTYPE html>
 {% load static %}
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>{% block <title></title> %}SignUp{% endblock %}</title>
+    {% block css %} 
+    <link rel="stylesheet" href="{% static 'css/signup.css' %}"> 
+    {% endblock css %}
+</head>
+<body>
+    
+    <section class = "diu">
+        
+        <img src="{% static 'image/hill1.png' %}" id="hill1">
+        <img src="{% static 'image/hill2.png' %}" id="hill2">
+        <img src="{% static 'image/hill3.png' %}" id="hill3">
+        <img src="{% static 'image/hill4.png' %}" id="hill4">
+        <img src="{% static 'image/hill5.png' %}" id="hill5">
+        <img src="{% static 'image/tree.png' %}" id="tree">
+        <img src="{% static 'image/leaf.png' %}" id="leaf">
+        <img src="{% static 'image/plant.png' %}" id="plant">
+    </section>
 
-{% block css %} <link rel="stylesheet" href="{% static 'css/base.css' %}"> {% endblock css %}
+    
+
+
+    <div class = "wrapper">
+        <span class = "icon-close">
+            <ion-icon name="close-outline"></ion-icon>
+        </span>
+        <div class = "form-box login">
+            <h2>SignUp</h2>
+            <form action="" method = "POST">
+                {% csrf_token %}
+                <div class = "input-box">
+                    <span class = "icon"><ion-icon name="person"></ion-icon></span>
+                    <input type="text" required name = "username">
+                    <label >Username</label>
+                </div>
+                <div class = "input-box">
+                    <span class = "icon"><ion-icon name="mail"></ion-icon></span>
+                    <input type="email" required name = "email">
+                    <label >Email</label>
+                </div>
+                <div class = "input-box">
+                    <span class = "icon"><ion-icon name="lock-closed"></ion-icon></span>
+                    <input type="password" required name = "password1">
+                    <label >Password</label>
+                </div>
+                <div class = "input-box">
+                    <span class = "icon"><ion-icon name="lock-closed"></ion-icon></span>
+                    <input type="password" required name = "password2">
+                    <label >Confrom Password</label>
+                </div>
+
+
+                <div class="remember-forgot">
+                    <label><input type="checkbox" name = "checkbox">I agree to the terms & conditions</label>
+
+                </div>
+                <button type = "submit" class = "btn">SignUp</button>
+                <div class = "login-register">
+                    <p>Already have an account <a href="{% url 'login' %}" class = "register-link">Login</a></p>
+                </div>
+            </form>
+        </div>
+    </div>
+
+    
 
 
 
-{% block content %}
-    <h1>This is login page</h1>
-{% endblock content %}
+
+
+
+
+
+  {% block content %}{% endblock content %}
+
+  {% load static %}  
+ <script src="{% static 'javaScript/login.js' %}"></script>
+
+ <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+
+</body>
+</html>
