--- a/first/static/css/login.css
+++ b/first/static/css/login.css
@@ -14,6 +14,14 @@ body{
 
 
 /* This is the picture section */
+.diu {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
 
 .diu img {
     position: absolute;
@@ -46,6 +54,7 @@ body{
     margin-top: 20px;
     margin-left: 50px;
     margin-bottom: 0px;
+    color: red;
 
 }
 
