--- a/first/static/css/signup.css
+++ b/first/static/css/signup.css
@@ -23,13 +23,21 @@ body{
     pointer-events: none;
 }
 
+.diu {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
 /* This is the boder section */
 .wrapper{
     margin-left: 550px;
     margin-top: 150px;
     position: relative;
     width: 400px;
-    height: 500px;
+    height: 520px;
     background: transparent;
     border: 2px solid rgba(255,255,255, .5);
     border-radius: 20px;
@@ -62,6 +70,16 @@ body{
     z-index: 1;
 }
 
+
+.wrapper .form-box .error{
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
+    margin-left: 60px;
+    margin-bottom: 0px;
+    color: red;
+
+}
 
 .form-box h2{
     font-size: 2em;
