--- a/first/templates/common_code/base.html
+++ b/first/templates/common_code/base.html
@@ -51,6 +51,9 @@
           In the DIU Question Bank, sections are used to categorize and organize questions based on specific subjects, topics, or disciplines. <br><br>
           Sections provide a structured framework for users to easily navigate and locate relevant questions within the question bank. <br><br>
           Here are some key points about sections in the DIU Question Bank.
+          In the DIU Question Bank, sections are used to categorize and organize questions based on specific subjects, topics, or disciplines. <br><br>
+          Sections provide a structured framework for users to easily navigate and locate relevant questions within the question bank. <br><br>
+          Here are some key points about sections in the DIU Question Bank.
       </p>
    </section>
 
