--- a/first/templates/common_code/base.html
+++ b/first/templates/common_code/base.html
@@ -21,9 +21,9 @@
       <h2 class="logo">Logo</h2>
       <nav class="navigation">
         <a href="#" class = "active">Home</a>
-        <a href="#">About</a>
-        <a href="#">Service</a>
-        <a href="#">Contact</a>
+        <a href="{% url 'signup' %}">About</a>
+        <a href="{% url 'signup' %}">Service</a>
+        <a href="{% url 'signup' %}">Upload</a>
       </nav>
 
       <nav class = "log">
