--- a/first/templates/lo_up/signup.html
+++ b/first/templates/lo_up/signup.html
@@ -29,7 +29,7 @@
 
     <div class = "wrapper">
         <span class = "icon-close">
-            <ion-icon name="close-outline" class ="close-icon"></ion-icon>
+            <a href="{% url 'homepage' %}"><ion-icon name="close-outline"></ion-icon></a>
         </span>
         <div class = "form-box login">
             <h2>SignUp</h2>
