--- a/first/templates/lo_up/dashboard.html
+++ b/first/templates/lo_up/dashboard.html
@@ -11,8 +11,9 @@
     {% block css %} 
         <link rel="stylesheet" href="{% static 'css/dashboard.css' %}"> 
     {% endblock css %}
-  
-     
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
 
    
 </head>
@@ -50,6 +51,51 @@
       </p>
    </section>
 
+   <footer class="footer">
+      <div class="container">
+          <div class="row">
+              <div class="footer-col">
+                  <h4>Company</h4>
+                  <ul>
+                      <li><a href="#">about us</a></li>
+                      <li><a href="#">our services</a></li>
+                      <li><a href="#">privacy policy</a></li>
+                      <li><a href="#">affiliate program</a></li>
+                  </ul>
+              </div>
+              <div class="footer-col">
+                  <h4>Get Help</h4>
+                  <ul>
+                      <li><a href="#">FAQ</a></li>
+                      <li><a href="#">shipping</a></li>
+                      <li><a href="#">order status</a></li>
+                      <li><a href="#">payment option</a></li>
+                  </ul>
+              </div>
+
+              <div class="footer-col">
+                <h4>Online</h4>
+                <ul>
+                    <li><a href="#">watch</a></li>
+                    <li><a href="#">bag</a></li>
+                    <li><a href="#">shoes</a></li>
+                    <li><a href="#">dress</a></li>
+                </ul>
+              </div>
+
+              <div class="footer-col">
+                <h4>Follow Us</h4>
+                <div class="social-links">
+                   <a href="#"><i class = "fab fa-facebook-f"></i></a>
+                   <a href="#"><i class = "fab fa-twitter"></i></a>
+                   <a href="#"><i class = "fab fa-instagram"></i></a>
+                   <a href="#"><i class = "fab fa-linkedin-in"></i></a>
+                </div>
+              </div>
+
+          </div>
+      </div>
+   </footer>
 
 
   {% block content %}{% endblock content %}
