--- a/first/templates/lo_up/dashboard.html
+++ b/first/templates/lo_up/dashboard.html
@@ -25,7 +25,7 @@
         <a href="#">About</a>
         <a href="#">Service</a>
         <a href="#">Contact</a>
-        <a href="#">Upload</a>
+        <a href="{% url 'upload' %}">Upload</a>
       </nav>
     </header>
 
