--- a/first/static/css/upload.css
+++ b/first/static/css/upload.css
@@ -31,7 +31,10 @@ body {
   }
 
   h1 {
-    color: #333;
+    margin-top: 10px;
+    font-size: 2em;
+    color: #162938;
+    text-align: center;
   }
 
   form {
@@ -52,21 +55,19 @@ body {
     width: 100%;
     padding: 10px;
     border-radius: 5px;
-    border: 1px solid #ccc;
+    border: 1px solid black;
     margin-bottom: 20px;
     font-size: 16px;
   }
 
   input[type="submit"] {
-    background-color: #4CAF50;
-    color: #fff;
+    width: 100%;
+    height: 45px;
+    background: #162938;
     border: none;
-    padding: 10px 20px;
-    border-radius: 5px;
-    font-size: 16px;
+    border-radius: 6px;
     cursor: pointer;
-  }
-
-  input[type="submit"]:hover {
-    background-color: #45a049;
+    font-size: 1em;
+    color: #fff;
+    font-weight: 500;
   }
