--- a/first/static/css/upload.css
+++ b/first/static/css/upload.css
@@ -15,7 +15,7 @@ body {
 
 
   .box{
-    margin-left: 550px;
+    margin-left: 500px;
     margin-top: 100px;
     position: relative;
     width: 600px;
@@ -31,7 +31,7 @@ body {
   }
 
   h1 {
-    margin-top: 10px;
+    margin-top: 25px;
     font-size: 2em;
     color: #162938;
     text-align: center;
@@ -39,8 +39,9 @@ body {
 
   form {
     margin-top: 25px;
-    color: transparent;
+    background-color: transparent;
     padding: 30px;
+    color: black;
   }
 
   label {
@@ -58,6 +59,7 @@ body {
     border: 1px solid black;
     margin-bottom: 20px;
     font-size: 16px;
+    background: white;
   }
 
   input[type="submit"] {
@@ -71,3 +73,24 @@ body {
     color: #fff;
     font-weight: 500;
   }
+
+
+
+  /* image section  */
+
+  .diu {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
+
+.diu img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    pointer-events: none;
+}
