--- a/first/templates/lo_up/upload.html
+++ b/first/templates/lo_up/upload.html
@@ -38,7 +38,7 @@
                 <option value="nfe">NFE</option>
             </select>
             <br><br>
-            
+
             <label for="semester">Select Semester</label>
                 <select id="semester" name="semester">
                     <option value="summer">Summer</option>
@@ -46,7 +46,10 @@
                     <option value="spring">Spring</option>
                 </select>
 
+        
             <br><br>
+
+            <label for="semester">Select file</label>
             <input type="file" class = "file" name="file" id="file">
             <br><br>
             <input type="submit" value="Upload">
