--- a/first/templates/lo_up/dashboard.html
+++ b/first/templates/lo_up/dashboard.html
@@ -51,6 +51,10 @@
       </p>
    </section>
 
+
+
+   {% comment %} this is the footer code {% endcomment %}
+
    <footer class="footer">
       <div class="container">
           <div class="row">
