--- a/first/templates/lo_up/upload.html
+++ b/first/templates/lo_up/upload.html
@@ -37,7 +37,7 @@
                 <option value="eee">EEE</option>
                 <option value="nfe">NFE</option>
             </select>
-            <br><br>
+
 
             <label for="semester">Select Semester</label>
                 <select id="semester" name="semester">
@@ -46,8 +46,24 @@
                     <option value="spring">Spring</option>
                 </select>
 
+
+
+            <label for="year">Year</label>
+                <select id="year" name="year">
+                    <option value="2023">2023</option>
+                    <option value="2022">2022</option>
+                    <option value="2021">2021</option>
+                </select>
+               
+
+
+            <label for="exam">Exam</label>
+                <select id="exam" name="exam">
+                    <option value="2023">Midterm</option>
+                    <option value="2022">Final</option>
+                </select>    
         
-            <br><br>
+       
 
             <label for="semester">Select file</label>
             <input type="file" class = "file" name="file" id="file">
