--- a/first/templates/lo_up/dashboard.html
+++ b/first/templates/lo_up/dashboard.html
@@ -19,7 +19,7 @@
 </head>
 <body>
     <header>
-      <h2 class="logo">Logo</h2>
+      <img src="{% static 'image/bad.jpg' %}">
       <nav class="navigation">
         <a href="#" class = "active">Home</a>
         <a href="#">About</a>
