--- a/first/templates/lo_up/upload.html
+++ b/first/templates/lo_up/upload.html
@@ -29,7 +29,7 @@
 
     <div class = "box">
         <h1>Upload Your Question</h1>
-        <form action="" method="POST">
+        <form action="{% url 'upload' %}" method="POST">
             {% csrf_token %}
             <label for="department">Select Department</label>
             <select id="department" name="department">
@@ -59,14 +59,14 @@
 
             <label for="exam">Exam</label>
                 <select id="exam" name="exam">
-                    <option value="2023">Midterm</option>
-                    <option value="2022">Final</option>
+                    <option value="midterm">Midterm</option>
+                    <option value="final">Final</option>
                 </select>    
         
        
 
             <label for="semester">Select file</label>
-            <input type="file" class = "file" name="file" id="file">
+            <input type="file" class = "file" required name="file" id="file" >
             <br><br>
             <input type="submit" value="Upload">
         </form>
