--- a/first/templates/common_code/base.html
+++ b/first/templates/common_code/base.html
@@ -18,7 +18,7 @@
 </head>
 <body>
     <header>
-      <h2 class="logo">Logo</h2>
+      <img src="{% static 'image/bad.jpg' %}" class = "logo">
       <nav class="navigation">
         <a href="#" class = "active">Home</a>
         <a href="{% url 'signup' %}">About</a>
