--- a/first/templates/lo_up/dashboard2.html
+++ b/first/templates/lo_up/dashboard2.html
@@ -131,7 +131,7 @@
       
                   <div class="clay-category">
                     <ion-icon name="cloud-upload-outline" ></ion-icon>
-                    <p> Upload Questions </p>
+                    <a href="{% url upload %}">Upload Questions </a>
                   </div>
       
                 </div>
