--- a/first/templates/lo_up/dashboard.html
+++ b/first/templates/lo_up/dashboard.html
@@ -43,13 +43,15 @@
     </section>
 
     <section class = "sec">
-      <h2>Diu Scrolling Website</h2>
+      <h2>DIU</h2>
       <p>
           In the DIU Question Bank, sections are used to categorize and organize questions based on specific subjects, topics, or disciplines. <br><br>
           Sections provide a structured framework for users to easily navigate and locate relevant questions within the question bank. <br><br>
-          Here are some key points about sections in the DIU Question Bank.
       </p>
    </section>
+
+
+
 
 
 
