--- a/first/static/css/base.css
+++ b/first/static/css/base.css
@@ -118,3 +118,198 @@ header{
     color: #fff;
     font-weight: 300;
 }
+
+
+
+/* this is the about our page  */
+
+
+
+.all{
+    background-color: #003329;
+    position: relative;
+    min-height: 70vh;
+}
+
+.all .b-all{
+   
+    padding-top: 60px;
+    padding-left: 60px;
+
+}
+
+.service{
+    width: 350px;
+    height: 340px;
+    background: transparent;
+    border: 2px solid rgba(255, 245, 245, 0.5);
+    border-radius: 20px;
+    backdrop-filter: blur(20px);
+    box-shadow: 0 0 30px rgba(147, 246, 216, 0.9);
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+    float: left;
+    padding: 20px 0;
+    padding: 30px;
+    text-align: center;
+    margin-left: 100px;
+}
+
+
+
+
+.service h1{
+    color: white;
+    font-weight: 600;
+    padding-bottom: 8px;
+}
+
+
+
+
+
+.service h1::before{
+    content: "";
+    position: absolute;
+    align-content: center;
+    top: 70px;
+    background-color: white;
+    height: 3px;
+    box-sizing: border-box;
+    width: 90px;
+}
+
+
+
+
+
+.service p{
+    color: #fff;
+    margin-top: 30px;
+}
+
+
+
+
+
+
+/* This is the foote part */
+
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+.container{
+    max-width: 1170px;
+}
+
+.row{
+    display: flex;
+
+    width: 137%;
+    height: 250px;
+    background: transparent;
+    border: 2px solid rgba(183, 147, 147, 0.5);
+    backdrop-filter: blur(20px);
+    box-shadow: 0 0 30px rgba(206, 198, 198, 0.9);
+    border-top-left-radius: 50px;
+    border-top-right-radius: 50px;
+
+}
+
+ul{
+    list-style: none;
+}
+
+.footer{
+    background-color: #003329;
+    position: relative;
+}
+
+.footer-col{
+    margin-top: 50px;
+    margin-left: 220px;
+}
+
+
+.footer-col h4{
+    font-size: 18px;
+    color: #fff;
+    text-transform: capitalize;
+    margin-bottom: 35px;
+    font-weight: 500;
+    position: relative;
+}
+
+.footer-col h4::before{
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: -4px;
+    background-color: #359381;
+    height: 2px;
+    box-sizing: border-box;
+    width: 60px;
+}
+
+
+.footer-col ul li:not(:last-child){
+    margin-bottom: 10px;
+}
+
+
+.footer-col ul li a{
+    font-size: 16px;
+    text-transform: capitalize;
+    color: #FFF;
+    text-decoration: none;
+    font-weight: 300;
+    color: #bbb;
+    display: block;
+    transition: all 0.3s ease;
+}
+
+
+.footer-col ul li a:hover {
+    color: #ffffffff;
+    padding-left: 10px;
+}
+
+
+.footer-col .social-links a{
+    display: inline-block;
+    height: 40px;
+    width: 40px;
+    background-color: rgba(255,255,2555,0.2);
+    margin: 0 10px 10px 0;
+    text-align: center;
+    line-height: 40px;
+    border-radius: 50%;
+    color: #fff;
+    transition: all 0.5s ease;
+}
+
+
+.footer-col .social-links a:hover{
+    color: #24262b;
+    background-color: #fff;
+}
+
+
+@media(max-width: 767px){
+    .footer-col{
+        width: 50%;
+        margin-bottom: 30px;
+    }
+}
+
+
+@media(max-width: 574px){
+    .footer-col{
+        width: 100%;
+        margin-bottom: 30px;
+    }
+}
