--- a/first/templates/lo_up/dashboard.html
+++ b/first/templates/lo_up/dashboard.html
@@ -24,8 +24,8 @@
         <a href="#" class = "active">Home</a>
         <a href="#">About</a>
         <a href="#">Service</a>
-        <a href="#">Contact</a>
         <a href="{% url 'upload' %}">Upload</a>
+        <a href="{% url 'search' %}">Search</a>
       </nav>
     </header>
 
