--- a/first/templates/common_code/base.html
+++ b/first/templates/common_code/base.html
@@ -62,18 +62,24 @@
       <div class = "b-all">
         <div class = "service" id = "about">
           <h1>ABOUT</h1>
-          <p>Md Ryad very free man.Fell free to contact him at any moment.But there is one condition took him as like he is she not he actually..xd</p>
+          <p>The question bank website is a valuable online resource for students and educators.
+            It offers a vast collection of curated questions from various subjects and levels of difficulty,
+            making it a convenient tool for exam preparation and knowledge enhancement.
+            </p>
         </div>
   
         <div class = "service" id = "services">
           <h1>SERVICES</h1>
-          <p>Service based on hourly..per hour 000.11$</p>
+          <p>The question bank provides access to a vast database of pre-made questions, allowing users to practice and test their knowledge.
+            Additionally, it offers features such as customizable quizzes, performance tracking,
+            and question recommendations based on individual learning needs.</p>
         </div>
   
         <div class = "service" id = "contact">
           <h1>CONTACT</h1>
           <p>Email: diuquestionsbank@gmail.com <br>
-             Facebook: Diu Question Bank
+             Facebook: Diu Question Bank <br>
+             Instagram: diuquestionsbank
           </p>
         </div>
       </div>
@@ -117,7 +123,7 @@
             </ul>
           </div>
 
-          
+
           <div class="footer-col">
             <h4>Follow Us</h4>
             <div class="social-links">
