--- a/first/templates/lo_up/dashboard.html
+++ b/first/templates/lo_up/dashboard.html
@@ -23,7 +23,7 @@
       <nav class="navigation">
         <a href="#" class = "active">Home</a>
         <a href="#">About</a>
-        <a href="#">Service</a>
+        <a href="#">Reward</a>
         <a href="{% url 'upload' %}">Upload</a>
         <a href="{% url 'search' %}">Search</a>
       </nav>
@@ -55,7 +55,7 @@
 
 
 
-   {% comment %} this is the footer code {% endcomment %}
+    {% comment %} this is the footer code   {% endcomment %}
 
    <footer class="footer">
       <div class="container">
@@ -92,10 +92,10 @@
               <div class="footer-col">
                 <h4>Follow Us</h4>
                 <div class="social-links">
-                   <a href="#"><i class = "fab fa-facebook-f"></i></a>
-                   <a href="#"><i class = "fab fa-twitter"></i></a>
-                   <a href="#"><i class = "fab fa-instagram"></i></a>
-                   <a href="#"><i class = "fab fa-linkedin-in"></i></a>
+                  <a href="https://www.facebook.com/diuquestionsbank"><i class = "fab fa-facebook-f"></i></a>
+                  {% comment %} <a href="#"><i class = "fab fa-twitter"></i></a> {% endcomment %}
+                  <a href="#"><i class = "fab fa-instagram"></i></a>
+                  {% comment %} <a href="#"><i class = "fab fa-linkedin-in"></i></a> {% endcomment %}
                 </div>
               </div>
 
@@ -110,4 +110,4 @@
  <script src="{% static 'javaScript/base.js' %}"></script>
 
 </body>
-</html>
+</html> 
