--- a/first/templates/lo_up/dashboard2.html
+++ b/first/templates/lo_up/dashboard2.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+{% comment %} <!DOCTYPE html>
 {% load static %}
 <html lang="en">
 <head>
@@ -11,10 +11,10 @@
     {% endblock css %}
 </head>
 <body>
+  {% csrf_token %}
   <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     <div class="dashboard-river">
-        {% csrf_token %}
 
         <div class="dashboard-container">
       
@@ -121,7 +121,7 @@
                   <div class="clay-category">
                     <ion-icon name="chevron-down-outline"></ion-icon>
                     
-                    <p>All Department</p>
+                    <p >All Department</p>
                   </div>
       
                   <div class="clay-category">
@@ -130,8 +130,8 @@
                   </div>
       
                   <div class="clay-category">
-                    <ion-icon name="cloud-upload-outline" ></ion-icon>
-                    <a href="{% url upload %}">Upload Questions </a>
+                    <ion-icon name="cloud-upload-outline"></ion-icon>
+                    <a href="{% url 'upload' %}">Upload</a>
                   </div>
       
                 </div>
@@ -291,4 +291,4 @@
 
     
 </body>
-</html>
+</html> {% endcomment %}
