--- a/first/templates/lo_up/reward.html
+++ b/first/templates/lo_up/reward.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html>
+<!DOCTYPE html>
+{% load static %}
+<html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <link rel="icon" href="/favicon.ico" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#000000" />
-  <title>Desktop - 1</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>{% block title %}Reward{% endblock title %}</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter%3A400%2C500%2C600%2C800"/>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro%3A400%2C500%2C600%2C800"/>
  
@@ -13,7 +14,9 @@
   <link rel="stylesheet" href="reward.css"/>
 {% endblock css %}
 </head>
+
 <body>
+  {% csrf_token %}
   <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
   
